# HIMLocoWithDeploy

./: .gitignore
deploy_cpp/: CMakeLists.txt  README.md  package.xml
deploy_cpp/config/: cyclonedds.xml  mybot_v2.rviz  setup_cyclonedds.sh
deploy_cpp/config/robots/: mybot.yaml  mybot_v2_real.yaml  mybot_v2_sim.yaml  mybot_v3_real copy.yaml  mybot_v3_real.yaml  mybot_v3_sim.yaml
deploy_cpp/include/: imu_subscriber.h  keyboard_controller.h  motor_driver.h  policy_runner.h  robot_config.h  robot_runtime_config.h  robot_visualizer.h  state_machine.h  udp_controller.h
deploy_cpp/launch/: deploy.launch.py  motor_debug.launch.py  sim.launch.py  visualize.launch.py
deploy_cpp/policy/: policy.pt  policy_4000.pt  policy_best18000.pt  policy_last.pt  policy_old.pt  policy_后腿拖地_右后瘸.pt
deploy_cpp/robot/mybot_v2/urdf/: mybot_v2.urdf
deploy_cpp/robot/mybot_v2_1/meshes/: FL_hip.STL  FR_calf.STL  FR_foot.STL  FR_thigh.STL  RL_foot.STL  RL_thigh.STL  RR_foot.STL
deploy_cpp/robot/mybot_v2_1/meshes_uncompressed/: RL_calf.STL  RL_hip.STL  RL_thigh.STL  RR_hip.STL
deploy_cpp/robot/mybot_v2_1/urdf/: mybot_v2_1.urdf
deploy_cpp/robot/mybot_v2_1/xml/: mybot_v2_1.xml
deploy_cpp/robot/mybot_v3/: 新狗转动惯量.txt
deploy_cpp/robot/mybot_v3/meshes/: FL_foot.STL  FL_hip.STL  FR_calf.STL  FR_foot.STL  FR_thigh.STL  RL_foot.STL  RL_hip.STL  RL_thigh.STL
deploy_cpp/robot/mybot_v3/uncompressed_meshes/: FL_calf.STL  FR_hip.STL  FR_thigh.STL  RL_foot.STL  RR_foot.STL  RR_thigh.STL
deploy_cpp/robot/mybot_v3/xml/: mybot_v3.xml
deploy_cpp/sim/: mujoco_sim_node.py
deploy_cpp/src/: deploy_node.cpp  imu_subscriber.cpp  keyboard_controller.cpp  motor_debug_node.cpp  motor_driver.cpp  policy_runner.cpp  robot_runtime_config.cpp  robot_visualizer.cpp  state_machine.cpp  udp_controller.cpp
deploy_cpp/web_teleop/: app.py  index.html
legged_gym/legged_gym/envs/: __init__.py
legged_gym/legged_gym/envs/base/: legged_robot_config.py
legged_gym/legged_gym/envs/mybot/: mybot_config.py
legged_gym/legged_gym/envs/mybot_v2/: mybot_v2_config.py
legged_gym/legged_gym/envs/mybot_v2_1/: mybot_v2_1_config.py
legged_gym/resources/robots/mybot/meshes/: FL_calf.STL  FL_foot.STL  FL_hip.STL  FL_thigh.STL  FR_calf.STL  FR_foot.STL  FR_hip.STL  FR_thigh.STL  RL_calf.STL  RL_foot.STL  RL_hip.STL  RL_thigh.STL  RR_calf.STL  RR_foot.STL  RR_hip.STL  RR_thigh.STL
legged_gym/resources/robots/mybot/xml/: mybot.xml
legged_gym/resources/robots/mybot_v2_1/meshes/: FL_calf.STL  FL_foot.STL  FL_thigh.STL  FR_hip.STL  RL_calf.STL  RL_hip.STL  RR_calf.STL  RR_hip.STL  RR_thigh.STL  body.STL
legged_gym/resources/robots/mybot_v2_1/meshes_uncompressed/: FL_calf.STL  FL_foot.STL  FL_hip.STL  FL_thigh.STL  FR_calf.STL  FR_foot.STL  FR_hip.STL  FR_thigh.STL  RL_foot.STL  RR_calf.STL  RR_foot.STL  RR_thigh.STL
legged_gym/resources/robots/mybot_v2_1/urdf/: mybot_v2_1.urdf
legged_gym/resources/robots/mybot_v2_1/xml/: mybot_v2_1.xml
legged_gym/resources/robots/mybot_v3/meshes/: FL_calf.STL  FL_thigh.STL  FR_hip.STL  RL_calf.STL  RR_calf.STL  RR_foot.STL  RR_hip.STL  RR_thigh.STL  body.STL
legged_gym/resources/robots/mybot_v3/uncompressed_meshes/: FL_foot.STL  FL_hip.STL  FL_thigh.STL  FR_calf.STL  FR_foot.STL  RL_calf.STL  RL_hip.STL  RL_thigh.STL  RR_calf.STL  RR_hip.STL
legged_gym/resources/robots/mybot_v3/urdf/: mybot_v3.urdf
